feat：改为后端通过Python解析短链获取图片url；

--- a/项目提示词.md
+++ b/项目提示词.md
@@ -2,3 +2,4 @@
 
 - 20260112-初始化
 - 用合适的语言和框架，开发一款可以去除图片上水印的微信小程序，支持上传图片、自动去除水印、手动涂抹去水印、下载处理后图片功能，精简原则
+- 改为后端通过Python解析短链获取图片url，前端微信平台调用后端服务获取图片展示并支持多选下载；
