feat: 移除豆包Cookie输入框，更新页面配色为清新主题，优化短链解析功能

--- a/项目提示词.md
+++ b/项目提示词.md
@@ -1,5 +1,8 @@
 
 
+- 260129
+- 修改前端，去掉Cookie输入框；页面配色改为清新主题配色；
+
 - 260120-增加豆包链接支持
 - 豆包链接必须从pc网页才能复制出来，示例：https://www.doubao.com/thread/w955a66c09897de89
 - 增强app.py，使其能够解析豆包的链接，获取其中的无水印图片，逻辑参考现在解析小红书链接获取图片的逻辑，豆包的链接是：
